--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "serialize-javascript": "^3.0.0",
     "serve-favicon": "^2.5.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
